--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 
 					   <div class="description-box">
 					      <h4>UX Case Study</h4>		      
-					      <p>I have done a udacity nanodegree in that i have done a casestudy for a medical app and fitness tracker. In this people can easily track their fitness. It's name is "CARE ME"</p>
+					      <p>I have done a udacity nanodegree in that i have done a casestudy for a medical app and fitness tracker. In this people can easily track their fitness. It's name is "CARE  FOR ME"</p>
 
 					      <div class="categories">UX Case Study</div>			               
 					   </div>
