--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/ux1.png"alt="YouLearn App">
+	               	<img src="images/portfolio/ux1.jpg"alt="YouLearn App">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
