--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>GOOGLE DEVELOPER STUDENT CLUBS</h4>
-	   					<p>DSC is being taken by Google in this club we collaborate with students and conduct workshops and make huge network.</p>
+	   					<p>DSC is being taken by Google in this club we collaborate with students and conduct workshops and make huge network. I have been working as a designer in this club and teach students about UI/UX.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -247,7 +247,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>TENSORFLOW COIMBATORE</h4>
-	   					<p>This is the community with helps students to leearn machine learning and i am part of designing team at TFUG CBE.</p>
+	   					<p>This is the community with helps students to learn machine learning and i am part of designing team at TFUG CBE. And working as a designer in this community for events.</p>
                 </div></p>
 	   				</div>
 
