--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>TENSORFLOW COIMBATORE</h4>
-	   					<p>This is the community with helps students to learn machine learning and i am part of designing team at TFUG CBE. And working as a designer in this community for events.</p>
+	   					<p>This is the community with helps students to learn machine learning and i am part of designing team at TFUG CBE. And working as a designer in this community for their events.</p>
                 </div></p>
 	   				</div>
 
