--- a/index.html
+++ b/index.html
@@ -524,14 +524,14 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Car wesite design</h4>		      
-					      <p>I have designed an classic car page which definitly attracts the users and users can see the cars.</p>
+					      <h4>UX Research</h4>		      
+					      <p>I have done a research on a real life project for monitoring elephants.</p>
 
 					      <div class="categories">WEB DESIGN</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://www.figma.com/file/P60ULpHdKoKL4PnTHGgTth/blog?node-id=0%3A1">Details</a>
+			            <a href="https://docs.google.com/document/d/10lpOD7sBJteypkMl-_BsN60iTDA8f8ms37p66aAgTqo/edit?usp=sharing">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
