--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 					      <h4>UX Research</h4>		      
 					      <p>I have done a research on a real life project for monitoring elephants.</p>
 
-					      <div class="categories">WEB DESIGN</div>			               
+					      <div class="categories">APP DESIGN & RESEARCH</div>			               
 					   </div>
 
 			         <div class="link-box">
